--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "better-auth": "^1.3.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "next": "^14.1.0",
