--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,20 @@
-DATABASE_URL=postgresql://habits:habits@localhost:5432/habits
+# Database
+POSTGRES_USER=habits
+POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_DB=habits
+DATABASE_URL="postgresql://habits:your_secure_password_here@localhost:5432/habits?connection_limit=5&pool_timeout=20"
+
+# App settings
 WEEK_START=MONDAY
 DEFAULT_TZ=America/New_York
+
+# Better auth
+BETTER_AUTH_SECRET=your_secret_here_generate_with_openssl_rand_hex_32
+BETTER_AUTH_URL=http://localhost:3001
+BETTER_AUTH_TELEMETRY=0
+
+# Client-side auth URL (must be NEXT_PUBLIC_ prefixed)
+NEXT_PUBLIC_AUTH_URL=http://localhost:3001
+
+# Production deploy
+DOMAIN=habits.yourdomain.com
